--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 "stash": "git stash && git stash drop"
 },
 "dependencies": {
-"@whiskeysockets/baileys": "6.6.0",             
+"@whiskeysockets/baileys": "git+https://gitlab.com/prabathLK/btn-baileys.git",             
 "@adiwajshing/keyed-db": "^0.2.4",
 "@shineiichijo/marika": "^2.0.2",  
 "pino": "^7.0.5",
